--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">ClinicPlace</string>
-    <string name="Mensaje">sadkhsagdjkhasgdjhgasdhjgsadjhsagjdhgsadjhgsahjdgsajhdgsajhdgsajhgdjsahgdasajdghkasjdhgkajshdkjashdkjsahdkjsahdkjsahkdjsahkdjhsakjdhsakjdhsak
-        sadjhaskjdhasshg </string>
+    <string name="Mensaje">adjunta una imagen</string>
     <string name="title_activity_user_profile">UserProfileActivity</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
